setup: db and osrs api setup

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,8 @@ POSTGRES_USER=
 POSTGRES_HOST=
 POSTGRES_PASSWORD=
 POSTGRES_DATABASE=
+
+BETTER_AUTH_SECRET=
+
+DISCORD_CLIENT_ID=
+DISCORD_CLIENT_SECRET=
