--- a/package.json
+++ b/package.json
@@ -16,17 +16,21 @@
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
     "autoprefixer": "10.4.16",
-    "drizzle-kit": "^0.19.13",
-    "drizzle-orm": "^0.28.6",
+    "better-auth": "^1.3.34",
+    "drizzle-orm": "^0.44.7",
     "eslint": "8.51.0",
     "eslint-config-next": "^15.1.6",
     "ms": "^2.1.3",
-    "next": "^15.1.6",
+    "next": "^15.5.6",
     "postcss": "8.4.31",
     "postgres": "^3.4.5",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
+  },
+  "devDependencies": {
+    "dotenv": "^17.2.3",
+    "drizzle-kit": "^0.31.7"
   }
 }
