--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "postgres-drizzle",
+  "name": "alc-osrs-prices",
   "repository": "https://github.com/vercel/examples.git",
   "license": "MIT",
   "version": "0.0.0",
@@ -13,24 +13,30 @@
   "dependencies": {
     "@types/ms": "^0.7.32",
     "@types/node": "20.8.3",
-    "@types/react": "^19.0.0",
-    "@types/react-dom": "^19.0.0",
+    "@types/react": "19.2.6",
+    "@types/react-dom": "19.2.3",
     "autoprefixer": "10.4.16",
     "better-auth": "^1.3.34",
     "drizzle-orm": "^0.44.7",
     "eslint": "8.51.0",
-    "eslint-config-next": "^15.1.6",
+    "eslint-config-next": "16.0.3",
     "ms": "^2.1.3",
-    "next": "^15.5.6",
+    "next": "16.0.3",
     "postcss": "8.4.31",
     "postgres": "^3.4.5",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
+    "react": "19.2.0",
+    "react-dom": "19.2.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
   },
   "devDependencies": {
     "dotenv": "^17.2.3",
     "drizzle-kit": "^0.31.7"
+  },
+  "pnpm": {
+    "overrides": {
+      "@types/react": "19.2.6",
+      "@types/react-dom": "19.2.3"
+    }
   }
 }
