--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-dom": "19.2.3",
     "autoprefixer": "10.4.16",
     "better-auth": "^1.3.34",
+    "date-fns": "^4.1.0",
     "drizzle-orm": "^0.44.7",
     "eslint": "8.51.0",
     "eslint-config-next": "16.0.3",
