--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "alc-osrs-prices",
-  "repository": "https://github.com/vercel/examples.git",
   "license": "MIT",
   "version": "0.0.0",
   "private": true,
@@ -19,8 +18,6 @@
     "better-auth": "^1.3.34",
     "date-fns": "^4.1.0",
     "drizzle-orm": "^0.44.7",
-    "eslint": "8.51.0",
-    "eslint-config-next": "16.0.3",
     "ms": "^2.1.3",
     "next": "16.0.3",
     "postcss": "8.4.31",
@@ -32,7 +29,12 @@
   },
   "devDependencies": {
     "dotenv": "^17.2.3",
-    "drizzle-kit": "^0.31.7"
+    "drizzle-kit": "^0.31.7",
+    "eslint": "9.39.1",
+    "eslint-config-next": "16.0.3",
+    "eslint-config-prettier": "^10.1.8",
+    "prettier": "3.6.2",
+    "prettier-plugin-tailwindcss": "^0.7.1"
   },
   "pnpm": {
     "overrides": {
