--- a/package.json
+++ b/package.json
@@ -10,21 +10,27 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.2.4",
     "@types/ms": "^0.7.32",
     "@types/node": "20.8.3",
     "@types/react": "19.2.6",
     "@types/react-dom": "19.2.3",
     "autoprefixer": "10.4.16",
     "better-auth": "^1.3.34",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "drizzle-orm": "^0.44.7",
+    "lucide-react": "^0.554.0",
     "ms": "^2.1.3",
     "next": "16.0.3",
     "postcss": "8.4.31",
     "postgres": "^3.4.5",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "tailwind-merge": "^3.4.0",
     "tailwindcss": "3.3.3",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "5.2.2"
   },
   "devDependencies": {
