--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "postgres": "^3.4.5",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "recharts": "2.15.4",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
@@ -45,6 +46,7 @@
   },
   "pnpm": {
     "overrides": {
+      "react-is": "^19.0.0-rc-69d4b800-20241021",
       "@types/react": "19.2.6",
       "@types/react-dom": "19.2.3"
     }
