--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     "lucide-react": "^0.554.0",
     "ms": "^2.1.3",
     "next": "16.0.3",
+    "next-themes": "^0.4.6",
     "postcss": "8.4.31",
     "postgres": "^3.4.5",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-icons": "^5.5.0",
     "recharts": "2.15.4",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "3.3.3",
